syntax = "proto3";
package gm.pb;

option go_package = "gm/api;pb";

message GetPlayerInfoListRequest {
  string platform_id = 1;
  repeated string server_id = 2;
  string type = 3;
  string val = 4;
  int32 page = 5;
  int32 page_size = 6;
}

message PlayerInfo {
  string platform_id = 1;
  string platform_name = 2;
  string server_id = 3;
  string server_name = 4;
  string channel_id = 5;
  string channel_name = 6;
  string user_id = 7;
  string role_id = 8;
  string role_name = 9;
  string channel_user_id = 10;
  string level = 11;
  int64 recharge_amount = 12;
  string register_ip = 13;
  string device_id = 14;
}

message GetPlayerInfoListResponse {
  repeated PlayerInfo player_info_list = 1;
}

message GetPlayerInfoRequest {
  string platform_id = 1;
  string server_id = 2;
  string role_id = 3;
}

message GoodsList {
  int64 goods_id = 1;
  string goods_name = 2;
  int32 quantity = 3;
  string status = 4;
}
message RechargeInfoList {
  string platform_order_no = 1;
  string recharge_money = 2;
  string recharge_vcoin = 3;
  string gift_id = 4;
  string gift_name = 5;
  string recharge_time = 6;
  string is_true = 7;
}
message ExtInfo {
  string user_role = 1;
  string power = 2;
  string realm = 3;
  string ownForce = 4;
  string star_coin = 5;
  string xia_yi_value = 6;
  string mobile_info = 7;
  string attack_value = 8;
  string defence_value = 9;
  string hp_value = 10;
  string strike_ratio = 11;
  string hit_value = 12;
  string dodge_value = 13;
  string attack_power = 14;
  string move_speed = 15;
  string element_attack = 16;
  string element_defense = 17;
  string damage_bonus = 18;
  string damage_reduction = 19;
  string critical_damage = 20;
  string explosive_reduction = 21;
}
message OthersList {
  string title = 1;
  repeated SonInfoList son_info_list = 2;
}
message SonInfoList {
  string k = 1;
  string v = 2;
}
message CustomizeList {
  string customize_title = 1;
  repeated string customize_info = 2;
  repeated SonCustomizeList son_customize_list = 3;
}
message SonCustomizeList {
  map<string, string> son_customize_map = 1; // key: value
}

message GetPlayerInfoResponse {
  string platform_id = 1;
  string platform_name = 2;
  string server_id = 3;
  string server_name = 4;
  string channel_id = 5;
  string channel_name = 6;
  string user_id = 7;
  string role_id = 8;
  string role_name = 9;
  string channel_user_id = 10;
  string status = 11;
  string code = 12;
  string info = 13;
  string level = 14;
  string vip_level = 15;
  string banned_type = 16;
  int64 create_time = 17;
  int64 last_login_time = 18;
  string last_login_IP = 19;
  string create_role_ip = 20;
  string major_id = 21;
  string major_name = 22;
  string empirical_value = 23;
  int32 top_up_star_coin = 24;
  int32 copper = 25;
  string device_info = 26;
  int64 current_online_time = 27;
  int64 total_online = 28;
  string recharge_amount = 29;
  string recent_recharge_amount = 30;
  string last_opt_time = 31;
  string client_version = 32;
  int64 last_recharge_time = 33;
  repeated GoodsList goods_list = 34;
  repeated RechargeInfoList recharge_info_list = 35;
  ExtInfo ext_info = 36;
  repeated OthersList others_list = 37;
  repeated CustomizeList customize_list = 38;
}

message QueryUserMsg {
  string platform_id = 1;
  string server_id = 2;
  string channel_id = 3;
  string is_online = 4;
  string user_id = 5;
  string role_id = 6;
  string role_name = 7;
  int32 page = 8;
  int32 page_size = 9;
}

message QueryUserListRequest {
  string data = 1;
  string sign = 2;
}

message QueryUserListResponse {
  repeated PlayerInfo user_list = 1;
}

message PlayerBannedListRequest {
  string val = 1;
  int32 page_size = 2;
  int32 page = 3;
  string platform_id = 4;
  string type = 5;
  string server_id = 6;
}

message PlayerBannedInfo {
  string platform_id = 1;
  string platform_name = 2;
  string server_id = 3;
  string server_name = 4;
  string channel_id = 5;
  string channel_name = 6;
  string user_id = 7;
  string role_id = 8;
  string role_name = 9;
  string channel_user_id = 10;
  string level = 11;
  string recharge_amount = 12;
  int64 create_time = 13;
  int64 lock_time = 14;
  int64 unlock_time = 15;
  int32 banned_type = 16;
  string banned_dimension = 17;
  string operator_id = 18;
  string operator = 19;
}

message PlayerBannedListResponse {
  int32 total_count = 1;
  repeated PlayerBannedInfo banned_info_list = 2;
}

message PlayerBannedRequest {
  string data = 1;
  string sign = 2;
}
message BannedReqMsg {
  string platform_id = 1;
  string server_id = 2;
  string user_id = 3;
  string role_id = 4;
  int32 banned_type = 5;
  string banned_dimension = 6;
  int32 banned_duration = 7;
  string banned_reason = 8;
  string remark = 9;
  string operator_id = 10;
  string operator = 11;
}

message BannedInfo {
  int64 banned_time = 1;
  int64 unseal_time = 2;
  int32 banned_type = 3; // 封禁类型(1:禁言 2:账号封禁 3:重复登陆 4:gm主动踢出)
  string banned_reason = 4;
}
message PlayerBannedResponse {
  BannedInfo banned_info = 1;
  string status = 2;
  string code = 3;
  string info = 4;
}

message GetBlockedUserInfoRequest {
  string uid = 1;
}

message GetBlockedUserInfoResponse {
  BannedInfo detail = 1;
}

message KickOfflineRequest {
  int32 type = 1; // 1: 角色名 2: 角色ID 3: 用户ID
  string val = 2;
}

message KickOfflineResponse {}
